# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../../dlp_permission_service.gni")

module_output_path = "dlp_permission_service/dlp_permission_service"

ohos_fuzztest("InstallDlpSandboxStubFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${dlp_root_dir}/test/fuzztest/dlp_permission/stub_fuzzer/installdlpsandboxstub_fuzzer"

  configs = [ "${dlp_root_dir}/test/fuzztest/dlp_permission:stub_fuzz_config" ]
  sources = [
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_service.cpp",
    "installdlpsandboxstub_fuzzer.cpp",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_service",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
